Fix card height on mobile devices

--- a/app/assets/stylus/widgets/card.styl
+++ b/app/assets/stylus/widgets/card.styl
@@ -15,7 +15,7 @@
             max-width 100%
 
 .card
-    height 325px
+    height $card-height
     margin 0 auto 10px
     max-width 400px
     padding $card-box-padding-above $card-box-padding-aside
